force-app/main/default/objects/Portfolio_Name__c/Portfolio_Name__c.object-meta.xml
<CustomObject>
    <label>Portfolio Name</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>