force-app/main/default/objects/Portfolio_Name__c/fields/Account_Purchasing_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Purchasing_Entity_ID__c</fullName>
    <description>Account Purchasing Entity ID (numeric)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Account Purchasing Entity ID(numeric)</inlineHelpText>
    <label>Account Purchasing Entity ID</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>