force-app/main/default/objects/Portfolio_Name__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Account Type used for Seller</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Type of Account being purchased (Credit Card, Secured Loan, Auto Loan,  Mortgage, etc)</inlineHelpText>
    <label>Account Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>