force-app/main/default/objects/Portfolio_Name__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <formula>CASE(Purchase_Group__c	, 
&apos;CAL&apos;,  &apos;Canaccede Assets LTD&apos;, 
&apos;AFL&apos;  , &apos;Canaccede Financial Group Ltd.&apos;,
&apos;CCL&apos;, &apos;CANACCEDE CREDIT LP&apos;,
&apos;CLP&apos;, &apos;CANACCEDE CREDIT LP&apos;,
&apos;AFF&apos;, &apos;Fidem SPV&apos;,
&apos;ETC&apos;, &apos;Fidem SPV&apos;,
&apos;AAL&apos;, &apos;Canaccede Financial Group Ltd.&apos;,
&apos;CIA&apos;, &apos;Canaccede Financial Group Ltd.&apos;,
&apos;CIH&apos;, &apos;Canaccede Financial Group Ltd.&apos;,
&apos;CFL&apos;, &apos;Canaccede International Management LTD&apos;,
&apos;FID&apos;, &apos;FIDEM FINANCE INC&apos;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Account Name</label>
    <type>Text</type>
</CustomField>