force-app/main/default/objects/Portfolio_Name__c/fields/Bill_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Bill_of_Sale__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bill of Sale</label>
    <referenceTo>Document_Storage__c</referenceTo>
    <relationshipLabel>Portfolio Names</relationshipLabel>
    <relationshipName>Portfolio_Names</relationshipName>
    <type>Lookup</type>
</CustomField>