force-app/main/default/objects/Portfolio_Name__c/fields/Charge_Off_policy__c.field-meta.xml
<CustomField>
    <fullName>Charge_Off_policy__c</fullName>
    <description>Charge Off policy used for Selller</description>
    <inlineHelpText>Charge Off policy used for Selller</inlineHelpText>
    <label>Charge Off policy</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>