force-app/main/default/objects/Portfolio_Name__c/fields/CIML_Reporting_Name__c.field-meta.xml
<CustomField>
    <fullName>CIML_Reporting_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIML Reporting Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>