force-app/main/default/objects/Portfolio_Name__c/fields/Collateral_Information_Provided__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Information_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is a secured debt will Collateral information be provided</description>
    <inlineHelpText>If this is a secured debt will Collateral information be provided</inlineHelpText>
    <label>Collateral Information Provided ?</label>
    <type>Checkbox</type>
</CustomField>