force-app/main/default/objects/Portfolio_Name__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Portfolio Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Description of Portfolio Name</inlineHelpText>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>