force-app/main/default/objects/Portfolio_Name__c/fields/Ineligible_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_Accounts__c</fullName>
    <description>Ineligible Accounts used For Seller</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Accounts pre-determined to be put back because do not align with purchase contract</inlineHelpText>
    <label>Ineligible Accounts</label>
    <length>50</length>
    <type>Text</type>
</CustomField>