force-app/main/default/objects/Portfolio_Name__c/fields/Interest_Accrual_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrual_Strategy__c</fullName>
    <description>Interest Accrual Strategy used for Seller</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Will interest accrue and if so from what date</inlineHelpText>
    <label>Interest Accrual Strategy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>