force-app/main/default/objects/Portfolio_Name__c/fields/Interest_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Interest_Purchase__c</fullName>
    <description>Interest Purchase used for seller</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Is previously accrued interest included in purchased balance and will interest continue to accrue on entire purchased balance</inlineHelpText>
    <label>Interest Purchase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>