force-app/main/default/objects/Portfolio_Name__c/fields/Investment_Group__c.field-meta.xml
<CustomField>
    <fullName>Investment_Group__c</fullName>
    <description>Investment Group used for Seller</description>
    <inlineHelpText>Reporting Group Name</inlineHelpText>
    <label>Investment Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BNS DISTRESSED FF</fullName>
            </value>
            <value>
                <fullName>MBNA DISTRESSED FF</fullName>
            </value>
            <value>
                <fullName>BNS 7 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>CUETS DISTRESSED FF</fullName>
            </value>
            <value>
                <fullName>BNS 1 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>BNS 1 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS 2 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>BNS 2 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS 3 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS 4 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS 5 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>BNS 5 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BNS 6 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>BNS 6 INSOLVENT</fullName>
            </value>
            <value>
                <fullName>BMO DISTRESSED FF</fullName>
            </value>
            <value>
                <fullName>BNS INSOLVENT FF</fullName>
            </value>
            <value>
                <fullName>CBV DISTRESSED</fullName>
            </value>
            <value>
                <fullName>CUETS INSOLVENT FF</fullName>
            </value>
            <value>
                <fullName>GOEASY DISTRESSED FF</fullName>
            </value>
            <value>
                <fullName>LENDCARE DISTRESSED FF</fullName>
            </value>
            <value>
                <fullName>NBC 1 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>NBC 2 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>PROGRESSA DISTRESSED</fullName>
            </value>
            <value>
                <fullName>RELIANCE DISTRESSED</fullName>
            </value>
            <value>
                <fullName>ROGERS DISTRESSED FF</fullName>
            </value>
            <value>
                <fullName>SANTANDER DISTRESSED</fullName>
            </value>
            <value>
                <fullName>TDCT 1 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>TDCT 2 DISTRESSED</fullName>
            </value>
            <value>
                <fullName>TDCT DISTRESSED FF</fullName>
            </value>
            <value>
                <fullName>PROGRESSA CCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>