force-app/main/default/objects/Portfolio_Name__c/fields/Media_Availabilty__c.field-meta.xml
<CustomField>
    <fullName>Media_Availabilty__c</fullName>
    <description>Media Availabilty used for Seller</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Documents provided at time of purchase, or to be requested as needed</inlineHelpText>
    <label>Media Availabilty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>