force-app/main/default/objects/Portfolio_Name__c/fields/Media_Types_Available__c.field-meta.xml
<CustomField>
    <fullName>Media_Types_Available__c</fullName>
    <description>Media Types Available used for Seller</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Types of Documentation available from seller</inlineHelpText>
    <label>Media Types Available</label>
    <length>100</length>
    <type>Text</type>
</CustomField>