force-app/main/default/objects/Portfolio_Name__c/fields/Non_Servicing_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Non_Servicing_Portfolio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Portfolio not serviced by Canaccede</description>
    <inlineHelpText>Portfolio not serviced by Canaccede</inlineHelpText>
    <label>Non Servicing Portfolio</label>
    <type>Checkbox</type>
</CustomField>