force-app/main/default/objects/Portfolio_Name__c/fields/Portfolio_Group__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Portfolio Group</label>
    <length>200</length>
    <type>Text</type>
</CustomField>