force-app/main/default/objects/Portfolio_Name__c/fields/Portfolio_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Group_Name__c</fullName>
    <description>Purchase Group used for Seller</description>
    <inlineHelpText>Portfolio Group assigned to the portfolio consisting of 3 letters (which links to the purchasing entity&apos;s bank account) followed by at least 3 numbers incrementing from the previous Portfolio Group</inlineHelpText>
    <label>Purchase Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test Portfolio Group Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>