force-app/main/default/objects/Portfolio_Name__c/fields/Purchase_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Accounts__c</fullName>
    <description>Accounts Purchased</description>
    <inlineHelpText>Accounts Purchased</inlineHelpText>
    <label>Accounts Purchased</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>