force-app/main/default/objects/Portfolio_Name__c/fields/Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Amount__c</fullName>
    <description>Amount Paid used for seller</description>
    <inlineHelpText>Amount Paid of the portfolio purchase as per the executed Bill of Sale</inlineHelpText>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>