force-app/main/default/objects/Portfolio_Name__c/fields/Purchase_Code__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Code__c</fullName>
    <description>Purchase ID appended with letter &apos;P&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Purchase ID appended with letter &apos;P&apos;</inlineHelpText>
    <label>Purchase Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>