force-app/main/default/objects/Portfolio_Name__c/fields/Purchase_date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_date__c</fullName>
    <description>Actual Purchase date used for seller</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Purchase Date as per the executed Bill of Sale</inlineHelpText>
    <label>Purchase date</label>
    <type>Date</type>
</CustomField>