force-app/main/default/objects/Portfolio_Name__c/fields/Purchase_Factor__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Factor__c</fullName>
    <description>Purchase Price as a percentage of purchased balance</description>
    <inlineHelpText>Purchase Price as a percentage of purchased balance</inlineHelpText>
    <label>Purchase Factor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>