force-app/main/default/objects/Portfolio_Name__c/fields/Purchase_Group__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Group__c</fullName>
    <description>Purchase group name with 3 character</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Purchase group name with 3 character</inlineHelpText>
    <label>Purchase Group</label>
    <length>15</length>
    <type>Text</type>
</CustomField>