force-app/main/default/objects/Portfolio_Name__c/fields/Purchase_Group_Debtnext__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Group_Debtnext__c</fullName>
    <description>Purchase Group Debtnext - Distressed or Insolvency</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Purchase Group Debtnext - Distressed or Insolvency</inlineHelpText>
    <label>Purchase Group Debtnext</label>
    <length>50</length>
    <type>Text</type>
</CustomField>