force-app/main/default/objects/Portfolio_Name__c/fields/Purchase_ID__c.field-meta.xml
<CustomField>
    <fullName>Purchase_ID__c</fullName>
    <label>Purchase ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>