force-app/main/default/objects/Portfolio_Name__c/fields/Purchase_Price_Percent__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Percent__c</fullName>
    <label>Purchase Price Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>