force-app/main/default/objects/Portfolio_Name__c/fields/Purchase_Status__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Status__c</fullName>
    <label>Purchase Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
                <default>true</default>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>