force-app/main/default/objects/Portfolio_Name__c/fields/Purchase_Value__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Value__c</fullName>
    <description>Purchase Face Value used for Seller</description>
    <inlineHelpText>&quot;The face value of the purchased accounts

Feedback from Wendy on 4-July:
Yes, this value (facevalue of the purchased account) can be populated on portfolio creation, but the reason it is added to this Portfolio list is so that it is populated as an informational field on the portfolio.  This value should match the amount purchased on the executed contract and is used as a double check during load creation to ensure we have all the correct values.&quot;</inlineHelpText>
    <label>Purchase Face Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>