force-app/main/default/objects/Portfolio_Name__c/fields/Purchasing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Entity__c</fullName>
    <description>Purchasing Entity used for Seller</description>
    <inlineHelpText>The purchaser listed on the executed Bill of Sale</inlineHelpText>
    <label>Purchasing Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canaccede Credit LP</fullName>
            </value>
            <value>
                <fullName>CGF Canada Funding</fullName>
                <label>CFG Canada Funding, LLC</label>
            </value>
            <value>
                <fullName>Fidem Finance Inc.</fullName>
            </value>
            <value>
                <fullName>Canaccede Financial Group Ltd.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>