force-app/main/default/objects/Portfolio_Name__c/fields/Putback_buyback_policy__c.field-meta.xml
<CustomField>
    <fullName>Putback_buyback_policy__c</fullName>
    <description>Putback/buyback policy used for Seller</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contractual putback terms for this purchase</inlineHelpText>
    <label>Putback/buyback policy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>