force-app/main/default/objects/Portfolio_Name__c/fields/Putback_provision_days__c.field-meta.xml
<CustomField>
    <fullName>Putback_provision_days__c</fullName>
    <description>Putback provision (days) used for Seller</description>
    <inlineHelpText>Number of days from purchase date that accounts are eligible to be putback</inlineHelpText>
    <label>Putback provision (days)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>