force-app/main/default/objects/Portfolio_Name__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Seller Information used for Seller</description>
    <inlineHelpText>Seller the portfolio was purchased from</inlineHelpText>
    <label>Seller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portfolio Names</relationshipLabel>
    <relationshipName>Portfolio_Names</relationshipName>
    <type>Lookup</type>
</CustomField>