force-app/main/default/objects/Portfolio_Name__c/validationRules/Unique_Portfolio_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Portfolio_Name</fullName>
    <active>true</active>
    <description>Unique Portfolio Name</description>
    <errorConditionFormula>IF(ISNEW(), IF( UPPER(Name) == UPPER(VLOOKUP( $ObjectType.Portfolio_Name__c.Fields.Name, $ObjectType.Portfolio_Name__c.Fields.Name, Name)),true , false), 

AND(ISCHANGED(Name), IF( UPPER(Name) == UPPER(VLOOKUP($ObjectType.Portfolio_Name__c.Fields.Name, $ObjectType.Portfolio_Name__c.Fields.Name, Name)),true,false)))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Portfolio Name already used, please use different Portfolio Name</errorMessage>
</ValidationRule>