force-app/main/default/objects/Portfolio_Name__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Factor__c</columns>
    <columns>Purchase_Amount__c</columns>
    <columns>Purchase_date__c</columns>
    <columns>Purchase_Value__c</columns>
    <columns>Purchase_Accounts__c</columns>
    <columns>Purchase_ID__c</columns>
    <columns>Account_Purchasing_Entity_ID__c</columns>
    <columns>Purchase_Group__c</columns>
    <columns>Portfolio_Group_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>